--- a/index.html
+++ b/index.html
@@ -20,34 +20,34 @@
 		/>
 	</head>
 	<body>
-		<div class="container">
-			<div class="pattern">
+		<main class="container">
+			<section class="pattern">
 				<img src="./assets/images/bg-pattern-card.svg" alt="patter-img" />
-			</div>
-			<div class="user-image">
+			</section>
+			<figure class="user-image">
 				<img
 					src="./assets/images/image-victor.jpg"
 					alt="image of Victor Crest"
 				/>
-				<div class="name-div">
+				<figcaption class="name-div">
 					<h1 class="name">Victor Crest <span>26</span></h1>
 					<p class="city">London</p>
-				</div>
-			</div>
-			<div class="content">
-				<div class="followers">
+				</figcaption>
+			</figure>
+			<section class="content">
+				<section class="followers">
 					<h2 class="stats"><strong>80K</strong></h2>
 					<p class="description">Followers</p>
-				</div>
-				<div class="likes">
+				</section>
+				<section class="likes">
 					<h2 class="stats"><strong>803K</strong></h2>
 					<p class="description">Likes</p>
-				</div>
-				<div class="photos">
+				</section>
+				<section class="photos">
 					<h2 class="stats"><strong>1.4K</strong></h2>
 					<p class="description">Photos</p>
-				</div>
-			</div>
-		</div>
+				</section>
+			</section>
+		</main>
 	</body>
 </html>
