sass added,landscape

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 			</section>
 			<figure class="user-image">
 				<img
+					id="pic"
 					src="./assets/images/image-victor.jpg"
 					alt="image of Victor Crest"
 				/>
